annimate_core/tests/snapshots/metadata__04_add_corpora_to_set_existing1.snap
---
source: annimate_core/tests/metadata.rs
---
Corpora {
    corpora: [
        Corpus {
            name: "subtok.demo",
            included_in_sets: [
                "Test set",
            ],
        },
        Corpus {
            name: "subtok.demo2",
            included_in_sets: [
                "Test set",
            ],
        },
    ],
    sets: [
        "Test set",
    ],
}

--

metadata-version = 1

[corpus-sets."Test set"]
corpus-names = [
    "subtok.demo",
    "subtok.demo2",
]
