annimate_core/tests/snapshots/metadata__07_add_corpora_to_set_new2.snap
---
source: annimate_core/tests/metadata.rs
---
Corpora {
    corpora: [
        Corpus {
            name: "subtok.demo",
            included_in_sets: [
                "Test set",
                "Test set 2",
            ],
        },
        Corpus {
            name: "subtok.demo2",
            included_in_sets: [
                "Test set",
            ],
        },
    ],
    sets: [
        "Test set",
        "Test set 2",
    ],
}

--

metadata-version = 1

[corpus-sets."Test set"]
corpus-names = [
    "subtok.demo",
    "subtok.demo2",
]

[corpus-sets."Test set 2"]
corpus-names = ["subtok.demo"]
