annimate_core/tests/snapshots/metadata__11_delete_corpus_set_only.snap
---
source: annimate_core/tests/metadata.rs
---
Corpora {
    corpora: [
        Corpus {
            name: "subtok.demo",
            included_in_sets: [
                "Test set",
            ],
        },
    ],
    sets: [
        "Test set",
        "Test set 3",
    ],
}

--

metadata-version = 1

[corpus-sets."Test set"]
corpus-names = ["subtok.demo"]

[corpus-sets."Test set 3"]
corpus-names = []
