annimate_core/tests/snapshots/metadata__12_delete_corpus_set_with_corpora.snap
---
source: annimate_core/tests/metadata.rs
---
Corpora {
    corpora: [],
    sets: [
        "Test set 3",
    ],
}

--

metadata-version = 1

[corpus-sets."Test set 3"]
corpus-names = []
